<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.picsum.PicsumViewDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/blue"
            android:paddingVertical="5dp"
            android:paddingHorizontal="20dp"
            android:text="@string/details_for_the_selected_item"
            android:textColor="@color/white" />


        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="@string/author_semicolon" />
            <TextView
                android:id="@+id/txtAuthor"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                tools:text="Author Goes Here" />
        </LinearLayout>


        <TextView
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingHorizontal="10dp"
            android:text="@string/view" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/blue"
            android:textStyle="italic"
            tools:text="@string/url" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingHorizontal="10dp"
            android:text="@string/download" />

        <TextView
            android:id="@+id/txtDownloadUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/blue"
            android:textStyle="italic"
            tools:text="@string/download_link" />


        <ImageView
            android:id="@+id/imgPicsum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:transitionName="header" />
    </LinearLayout>
</ScrollView>
